fixed alignment issue on offers tile

--- a/static/index.css
+++ b/static/index.css
@@ -147,7 +147,7 @@ main {
     margin-top: 1rem;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: space-around;
     align-items: center;
     width: 100%;
